Improve logo transition

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,9 +1,11 @@
 img {
 	margin-bottom: 1.5rem;
+	transition: all 0.25s ease-out;
 }
 
 img:hover {
 	filter: drop-shadow(0 0 2em #673ab8aa);
+	transition: all 0.25s ease-out;
 }
 
 .home section {
